// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTranslation Hook Plurals _zero, _one and _plural 1`] = `
<ul>
  <li
    key="item_0"
  >
    There are 0 cats (zero)
  </li>
  <li
    key="item_1"
  >
    There is 1 cat (one)
  </li>
  <li
    key="item_2"
  >
    There are 2 cats (plural)
  </li>
  <li
    key="item_5"
  >
    There are 5 cats (plural)
  </li>
</ul>
`;

exports[`useTranslation Hook Plurals default and _plural 1`] = `
<ul>
  <li
    key="item_0"
  >
    There are 0 dogs (plural)
  </li>
  <li
    key="item_1"
  >
    There is 1 dog (default)
  </li>
  <li
    key="item_2"
  >
    There are 2 dogs (plural)
  </li>
  <li
    key="item_5"
  >
    There are 5 dogs (plural)
  </li>
</ul>
`;

exports[`useTranslation Hook Replaces numbers with tpl parameter 1`] = `
<h1>
  This is a 1
</h1>
`;

exports[`useTranslation Hook Replaces strings with tpl parameter 1`] = `
<h1>
  This is a replaced string
</h1>
`;

exports[`useTranslation Hook Shows the translationstring when not found 1`] = `
<h1>
  {{ MYNAMESPACE-NOKEY }}
</h1>
`;

exports[`useTranslation Hook Shows the translationstring without namespace when not found 1`] = `
<h1>
  {{ NOKEY }}
</h1>
`;

exports[`useTranslation Hook Shows translationstring when replacevalues are not string or number  1`] = `
<h1>
  This is a {{ MYNAMESPACE-TEST }}
</h1>
`;

exports[`useTranslation Hook Translates without namespace and without template 1`] = `
<h1>
  This is a message without namespace
</h1>
`;

exports[`useTranslation Hook cant find key when only plurals are defined 1`] = `
<ul>
  <li
    key="item_0"
  >
    {{ PLUNDEFINED-DOG }}
  </li>
  <li
    key="item_1"
  >
    {{ PLUNDEFINED-DOG }}
  </li>
  <li
    key="item_2"
  >
    {{ PLUNDEFINED-DOG }}
  </li>
  <li
    key="item_5"
  >
    {{ PLUNDEFINED-DOG }}
  </li>
</ul>
`;

exports[`useTranslation Hook does not crash when namespace is not defined 1`] = `
<h1>
  {{ NOTDEFINED-NOKEY }}
</h1>
`;

exports[`useTranslation Hook plurals work with mixed replacements 1`] = `
<ul>
  <li
    key="item_0"
  >
    There are 0 cats jumping (zero)
  </li>
  <li
    key="item_1"
  >
    There is 1 cat jumping (one)
  </li>
  <li
    key="item_2"
  >
    There are 2 cats jumping (plural)
  </li>
  <li
    key="item_5"
  >
    There are 5 cats jumping (plural)
  </li>
</ul>
`;

exports[`useTranslation Hook replacement order 1`] = `
<ul>
  <li
    key="item_0"
  >
    There are 0 cats
  </li>
  <li
    key="item_1"
  >
    There is 1 cats
  </li>
  <li
    key="item_2"
  >
    There are 2 cats
  </li>
  <li
    key="item_5"
  >
    There are 5 cats
  </li>
</ul>
`;

exports[`useTranslation Hook replaces multiple templates 1`] = `
<h1>
  There are 3 cats
</h1>
`;

exports[`useTranslation Hook works with default, _zero, _one 1`] = `
<ul>
  <li
    key="item_0"
  >
    There should be 0 cats (zero)
  </li>
  <li
    key="item_1"
  >
    There should be 1 cat (one)
  </li>
  <li
    key="item_2"
  >
    There are 2 cats (default)
  </li>
  <li
    key="item_5"
  >
    There are 5 cats (default)
  </li>
</ul>
`;
